--- a/_prose.yml
+++ b/_prose.yml
@@ -1,8 +1,8 @@
 permalink: pretty
 markdown: rdiscount
 prose:
-  rooturl: '_posts'
-  siteurl: 'http://labex.github.io/'
+  rooturl: ''
+  siteurl: 'http://bertrandkeller.github.io/'
   relativeLinks: ''
   media: 'media'
   ignore:
@@ -14,6 +14,7 @@ prose:
     - _config.yml
     - /_layouts
     - /_includes
+    - sass
   metadata:
     _posts/actus:
       - name: "category"
