--- a/_prose.yml
+++ b/_prose.yml
@@ -14,28 +14,30 @@ prose:
     - _config.yml
     - /_layouts
     - /_includes
-    - sass
+    - _sass
   metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "blog"
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Apples"
+              value: "apples"
+            - name: "Bananas"
+              value: "bananas"
     _posts/actus:
-      - name: "category"
+      - name: "layout"
         field:
           element: "hidden"
-          value: "Actus"
-    _posts/ecrits:
-      - name: "category"
+          value: "page"
+      - name: "permalink"
         field:
-          element: "hidden"
-          value: "Écrits"
-      - name: "written-director"
-        field:
-          label:"Directeur"
-    _posts/evenements:
-      - name: "category"
-        field:
-          element: "hidden"
-          value: "Événement"
-    _posts/medias:
-      - name: "médias"
-        field:
-          element: "hidden"
-          value: "Médias"
+          element: "text"
+          label: "Permalink"
+          value: ""
