--- a/_prose.yml
+++ b/_prose.yml
@@ -17,27 +17,16 @@ prose:
     - _sass
   metadata:
     _posts:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "blog"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Add Tags"
-          placeholder: "Choose Tags"
-          options:
-            - name: "Apples"
-              value: "apples"
-            - name: "Bananas"
-              value: "bananas"
     _posts/actus:
       - name: "layout"
         field:
           element: "hidden"
-          value: "page"
-      - name: "permalink"
+          value: "post"
+      - name: "categories"
         field:
-          element: "text"
-          label: "Permalink"
-          value: ""
+          element: "hidden"
+          value: "Actus"
+      - name: "author"
+        field:
+          label: "Auteur"
+          placeholder: "Indiquer l'auteur du billet"
