--- a/_prose.yml
+++ b/_prose.yml
@@ -17,6 +17,10 @@ prose:
     - _sass
   metadata:
     _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
     _posts/actus:
       - name: "layout"
         field:
