--- a/_prose.yml
+++ b/_prose.yml
@@ -20,17 +20,25 @@ prose:
       - name: "layout"
         field:
           element: "hidden"
-          value: "post"
+          value: "blog"
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Apples"
+              value: "apples"
+            - name: "Bananas"
+              value: "bananas"
     _posts/actus:
       - name: "layout"
         field:
           element: "hidden"
-          value: "post"
-      - name: "categories"
+          value: "page"
+      - name: "permalink"
         field:
-          element: "hidden"
-          value: "Actus"
-      - name: "author"
-        field:
-          label: "Auteur"
-          placeholder: "Indiquer l'auteur du billet"
+          element: "text"
+          label: "Permalink"
+          value: ""
+      
