configuration de prose.io

--- a/_prose.yml
+++ b/_prose.yml
@@ -47,6 +47,7 @@ prose:
           value: "Actus"
       - name: "author"
         field:
+          element: "text"
           label: "Auteur"
           placeholder: "Indiquer l'auteur du billet"
           value: ""
