configuration de prose.io

--- a/_prose.yml
+++ b/_prose.yml
@@ -40,3 +40,8 @@ prose:
           element: "text"
           label: "Auteur"
           value: ""
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Ajouter des tags"
+          placeholder: "Choisir Tags"
