--- a/_prose.yml
+++ b/_prose.yml
@@ -2,8 +2,8 @@ permalink: pretty
 markdown: rdiscount
 prose:
   rooturl: ''
-  siteurl: 'http://bertrandkeller.github.io/'
-  relativeLinks: ''
+  siteurl: 'http://bertrandkeller.github.io/Labex'
+  relativeLinks: 'http://bertrandkeller.github.io/Labex/links.jsonp'
   media: 'media'
   ignore:
     - index.html
@@ -45,6 +45,7 @@ prose:
           element: "multiselect"
           label: "Ajouter des tags"
           placeholder: "Choisir Tags"
+          alterable: true
     _posts/ecrits:
       - name: "layout"
         field:
@@ -69,6 +70,7 @@ prose:
           element: "multiselect"
           label: "Ajouter des tags"
           placeholder: "Choisir Tags"
+          alterable: true
       - name: "written-director"
         field:
           element: "text"
@@ -128,6 +130,7 @@ prose:
           element: "multiselect"
           label: "Ajouter des tags"
           placeholder: "Choisir Tags"
+          alterable: true
       - name: "event-title"
         field:
           element: "text"
@@ -171,6 +174,7 @@ prose:
           element: "multiselect"
           label: "Ajouter des tags"
           placeholder: "Choisir Tags"
+          alterable: true
       - name: "media-url"
         field:
           element: "text"
