--- a/_prose.yml
+++ b/_prose.yml
@@ -139,7 +139,7 @@ prose:
           element: "text"
           label: "Informations"
           value: ""
-      - name: "event-contact"
+      - name: "event-contact.mail"
         field:
           element: "multiselect"
           label: "Contact"
