ajout du fonctionnement déconnecté

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Labex - Cinéphilies / Sériphilies
 
 # Short bio or description (displayed in the header)
-description: Venez découvrir sur cette page les enjeux du projets Cinéphilies / Sériphilies
+description: Venez découvrir sur cette page les enjeux du projet
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
